# LeoRent_Backend

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyrightconfig.json
.github/workflows/: CICD.yml  deploy.yml
LeoRent_backend/: README.md  pyproject.toml  tasks.py
LeoRent_backend/src/leorent_backend/: database.py  database_connector.py  main.py  models.py  redis_client.py
LeoRent_backend/src/leorent_backend/config/: backblaze.py  database.py  firebase.py  gemini.py  groq.py
LeoRent_backend/src/leorent_backend/database/: apartment.py  user.py
LeoRent_backend/src/leorent_backend/middleware/: rate_limiter.py
LeoRent_backend/src/leorent_backend/routers/: apartment.py  filter.py  firebase.py  healthcheck.py  photos.py  user.py
LeoRent_backend/src/leorent_backend/schemas/: apartment.py  auth.py  filter.py  firebase.py  photo.py  user.py
LeoRent_backend/src/leorent_backend/services/: __init__.py  backblaze_service.py
LeoRent_backend/tests/: client.py  conftest.py  test_apartment.py  test_auth.py  test_filter.py  test_firebase_auth.py  test_healthcheck.py  test_photos.py
scripts/: build.sh  pre-commit.bash
