[project]
name = "leorent-backend"
version = "0.1.0"
description = ""
authors = [{ name = "katharsis23", email = "daniklv2006@gmail.com" }]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "typing-inspect (>=0.9.0,<0.10.0)",
    "fastapi-utils (>=0.8.0,<0.9.0)",
    "greenlet (>=3.3.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "boto3 (>=1.28.0,<2.0.0)",
    "aiofiles (>=23.2.0,<24.0.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
]

[tool.poetry]
packages = [{ include = "leorent_backend", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (==1.3.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
]


[tool.flake8]
extend-ignore = ["E501", "F401", "F403", "B008"]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "pgdata",
    "migrations",
    "build",
    "dist",
]

max-complexity = 10

max-line-length = 120

per-file-ignores = ["__init__.py:F401", "tests/*:F401,F811"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
